--- a/package.json
+++ b/package.json
@@ -10,19 +10,29 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/bootstrap": "^4.3.2",
+    "@types/history": "^4.7.6",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.8",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-redux": "^5.0.18",
     "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-thunk": "^2.1.0",
     "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.8.0",
+    "history": "^5.0.0",
     "jquery": "^3.5.1",
     "material-table": "^1.58.2",
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.5",
