--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,9 +14,9 @@
     "@types/history": "^4.7.6",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.38",
-    "@types/react": "^16.9.35",
+    "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-router-redux": "^5.0.18",
@@ -30,10 +31,13 @@
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^5.1.2",
+    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.5",
     "uuid": "^8.1.0"
