--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/react-router-redux": "^5.0.18",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-logger": "^3.0.8",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
@@ -37,6 +39,8 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.5",
