--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bootstrap": "^4.3.2",
     "@types/history": "^4.7.6",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.158",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
@@ -29,6 +30,7 @@
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.19",
     "material-table": "^1.58.2",
     "moment": "^2.26.0",
     "react": "^16.13.1",
