--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75",
-    "typescript": "^3.7.5",
-    "uuid": "^8.1.0"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
