--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "business-proxy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/business_proxy",
+  "homepage": "",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
